Fix spacing, add placeholders

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -20,12 +20,12 @@ body {
   -webkit-box-sizing: border-box;
   -moz-bo‌​x-sizing: border-box;
   -ms-box-sizing: border-box;
+  margin-top: 20px;
 }
 
 #header {
-  padding-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 30px;
   letter-spacing: 10px;
 }
@@ -33,6 +33,7 @@ body {
 #articles-and-form-container {
   width: 50%;
   float: left;
+  margin-left: 100px;
 }
 
 #archive-and-tags-container {
@@ -222,8 +223,8 @@ body {
 .archive-header {
   display: inline-block;
   font-size: 25px;
-  padding-top: 20px;
-  padding-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .archive-view-header {
@@ -264,8 +265,7 @@ body {
 
 form {
   padding-top: 10px;
-  padding-left: 20px;
-
+  padding-bottom: 20px;
 }
 
 textarea {
@@ -390,7 +390,9 @@ input[type="text"]:focus {
 
 .article {
   width: 100%;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
 }
 
 .article:hover .pencil {
